{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 27,
  "lineage": "1d45831e-b713-a474-38ff-eb9df13f48ab",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "JobF-INSTANCE-AZ-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a6eaae9938c858c",
            "arn": "arn:aws:ec2:us-east-1:949160236929:instance/i-0c4dad99502736506",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c4dad99502736506",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06fe5fcfc66750c54",
            "private_dns": "ip-10-0-2-83.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.83",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-001aadc276a256be2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f98866a49c672213",
            "tags": {
              "Name": "JobF-INSTANCE-AZ-A"
            },
            "tags_all": {
              "Name": "JobF-INSTANCE-AZ-A"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-087f467951b0da0fb"
            ]
          },
          "dependencies": [
            "aws_instance.JobF-INSTANCE-PUBLIC",
            "aws_security_group.JobF-SG-LOAD-BALANCER",
            "aws_security_group.JobF-SG-PUBLIC",
            "aws_security_group.JobF-SG-WEB",
            "aws_subnet.JobF-SUBNET-AZ-A",
            "aws_subnet.JobF-SUBNET-PUBLIC",
            "aws_vpc.JobF-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "JobF-INSTANCE-AZ-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a6eaae9938c858c",
            "arn": "arn:aws:ec2:us-east-1:949160236929:instance/i-02fdcefbc90277d54",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02fdcefbc90277d54",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-090ff679581a48d42",
            "private_dns": "ip-10-0-3-126.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.126",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05668fd8e7e3b37e9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c1c6db715994c74e",
            "tags": {
              "Name": "JobF-INSTANCE-AZ-B"
            },
            "tags_all": {
              "Name": "JobF-INSTANCE-AZ-B"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-087f467951b0da0fb"
            ]
          },
          "dependencies": [
            "aws_instance.JobF-INSTANCE-PUBLIC",
            "aws_security_group.JobF-SG-LOAD-BALANCER",
            "aws_security_group.JobF-SG-PUBLIC",
            "aws_security_group.JobF-SG-WEB",
            "aws_subnet.JobF-SUBNET-AZ-B",
            "aws_subnet.JobF-SUBNET-PUBLIC",
            "aws_vpc.JobF-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "JobF-INSTANCE-AZ-C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a6eaae9938c858c",
            "arn": "arn:aws:ec2:us-east-1:949160236929:instance/i-07c0dc175ac9d1407",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07c0dc175ac9d1407",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ba333a92fef21da6",
            "private_dns": "ip-10-0-4-37.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.37",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-039185aba51912513",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08ef259f89026d659",
            "tags": {
              "Name": "JobF-INSTANCE-AZ-C"
            },
            "tags_all": {
              "Name": "JobF-INSTANCE-AZ-C"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-087f467951b0da0fb"
            ]
          },
          "dependencies": [
            "aws_instance.JobF-INSTANCE-PUBLIC",
            "aws_security_group.JobF-SG-LOAD-BALANCER",
            "aws_security_group.JobF-SG-PUBLIC",
            "aws_security_group.JobF-SG-WEB",
            "aws_subnet.JobF-SUBNET-AZ-C",
            "aws_subnet.JobF-SUBNET-PUBLIC",
            "aws_vpc.JobF-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "JobF-INSTANCE-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a6eaae9938c858c",
            "arn": "arn:aws:ec2:us-east-1:949160236929:instance/i-0d8485b8c1f54320c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d8485b8c1f54320c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05c9e77728a960c89",
            "private_dns": "ip-10-0-1-67.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.67",
            "public_ip": "34.201.165.211",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01c8cbd7b1864ebbd",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09d3053f0709e9061",
            "tags": {
              "Name": "JobF-INSTANCE-PUBLIC"
            },
            "tags_all": {
              "Name": "JobF-INSTANCE-PUBLIC"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-041db447f8bd9b47c"
            ]
          },
          "dependencies": [
            "aws_security_group.JobF-SG-LOAD-BALANCER",
            "aws_security_group.JobF-SG-PUBLIC",
            "aws_security_group.JobF-SG-WEB",
            "aws_subnet.JobF-SUBNET-PUBLIC",
            "aws_vpc.JobF-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "JobF-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:internet-gateway/igw-037843ef5aa5c5cfb",
            "id": "igw-037843ef5aa5c5cfb",
            "owner_id": "949160236929",
            "tags": {
              "Name": "JobF-IGW"
            },
            "tags_all": {
              "Name": "JobF-IGW"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "JobF-LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:949160236929:loadbalancer/app/JobF-LB/048e1855bcafbd66",
            "arn_suffix": "app/JobF-LB/048e1855bcafbd66",
            "desync_mitigation_mode": "defensive",
            "dns_name": "JobF-LB-78222096.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:949160236929:loadbalancer/app/JobF-LB/048e1855bcafbd66",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "JobF-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-083d6e949364d6eba"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08ef259f89026d659"
              },
              {
                "subnet_id": "subnet-0c1c6db715994c74e"
              },
              {
                "subnet_id": "subnet-0f98866a49c672213"
              }
            ],
            "subnets": [
              "subnet-08ef259f89026d659",
              "subnet-0c1c6db715994c74e",
              "subnet-0f98866a49c672213"
            ],
            "vpc_id": "vpc-04430bcc9f8c8a83a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.JobF-SG-LOAD-BALANCER",
            "aws_subnet.JobF-SUBNET-AZ-A",
            "aws_subnet.JobF-SUBNET-AZ-B",
            "aws_subnet.JobF-SUBNET-AZ-C",
            "aws_vpc.JobF-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "JobF-LB-LISTENER",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:949160236929:listener/app/JobF-LB/048e1855bcafbd66/b6409ba35a47f093",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:949160236929:targetgroup/JobF-LB-TG2/8476511dec7eb489",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:949160236929:listener/app/JobF-LB/048e1855bcafbd66/b6409ba35a47f093",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:949160236929:loadbalancer/app/JobF-LB/048e1855bcafbd66",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.JobF-LB",
            "aws_lb_target_group.JobF-LB-TG2",
            "aws_security_group.JobF-SG-LOAD-BALANCER",
            "aws_subnet.JobF-SUBNET-AZ-A",
            "aws_subnet.JobF-SUBNET-AZ-B",
            "aws_subnet.JobF-SUBNET-AZ-C",
            "aws_vpc.JobF-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "JobF-LB-TG2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:949160236929:targetgroup/JobF-LB-TG2/8476511dec7eb489",
            "arn_suffix": "targetgroup/JobF-LB-TG2/8476511dec7eb489",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:949160236929:targetgroup/JobF-LB-TG2/8476511dec7eb489",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "JobF-LB-TG2",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04430bcc9f8c8a83a"
          },
          "dependencies": [
            "aws_vpc.JobF-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "JobF-LB-TG2-ATTACH-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:949160236929:targetgroup/JobF-LB-TG2/8476511dec7eb489-20230922090723534600000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:949160236929:targetgroup/JobF-LB-TG2/8476511dec7eb489",
            "target_id": "i-0c4dad99502736506"
          },
          "dependencies": [
            "aws_instance.JobF-INSTANCE-AZ-A",
            "aws_instance.JobF-INSTANCE-PUBLIC",
            "aws_lb_target_group.JobF-LB-TG2",
            "aws_security_group.JobF-SG-LOAD-BALANCER",
            "aws_security_group.JobF-SG-PUBLIC",
            "aws_security_group.JobF-SG-WEB",
            "aws_subnet.JobF-SUBNET-AZ-A",
            "aws_subnet.JobF-SUBNET-PUBLIC",
            "aws_vpc.JobF-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "JobF-LB-TG2-ATTACH-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:949160236929:targetgroup/JobF-LB-TG2/8476511dec7eb489-2023092209074451080000000a",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:949160236929:targetgroup/JobF-LB-TG2/8476511dec7eb489",
            "target_id": "i-02fdcefbc90277d54"
          },
          "dependencies": [
            "aws_instance.JobF-INSTANCE-AZ-B",
            "aws_instance.JobF-INSTANCE-PUBLIC",
            "aws_lb_target_group.JobF-LB-TG2",
            "aws_security_group.JobF-SG-LOAD-BALANCER",
            "aws_security_group.JobF-SG-PUBLIC",
            "aws_security_group.JobF-SG-WEB",
            "aws_subnet.JobF-SUBNET-AZ-B",
            "aws_subnet.JobF-SUBNET-PUBLIC",
            "aws_vpc.JobF-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "JobF-LB-TG2-ATTACH-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:949160236929:targetgroup/JobF-LB-TG2/8476511dec7eb489-20230922090743987800000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:949160236929:targetgroup/JobF-LB-TG2/8476511dec7eb489",
            "target_id": "i-07c0dc175ac9d1407"
          },
          "dependencies": [
            "aws_instance.JobF-INSTANCE-AZ-C",
            "aws_instance.JobF-INSTANCE-PUBLIC",
            "aws_lb_target_group.JobF-LB-TG2",
            "aws_security_group.JobF-SG-LOAD-BALANCER",
            "aws_security_group.JobF-SG-PUBLIC",
            "aws_security_group.JobF-SG-WEB",
            "aws_subnet.JobF-SUBNET-AZ-C",
            "aws_subnet.JobF-SUBNET-PUBLIC",
            "aws_vpc.JobF-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "JobF-RTB-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:route-table/rtb-081995ff8545c7d01",
            "id": "rtb-081995ff8545c7d01",
            "owner_id": "949160236929",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-037843ef5aa5c5cfb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "JobF-RTB-PUBLIC"
            },
            "tags_all": {
              "Name": "JobF-RTB-PUBLIC"
            },
            "timeouts": null,
            "vpc_id": "vpc-04430bcc9f8c8a83a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.JobF-IGW",
            "aws_vpc.JobF-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "JobF-RTB-PUBLIC-ASSOC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086f44794b700632e",
            "route_table_id": "rtb-081995ff8545c7d01",
            "subnet_id": "subnet-09d3053f0709e9061"
          },
          "dependencies": [
            "aws_internet_gateway.JobF-IGW",
            "aws_route_table.JobF-RTB-PUBLIC",
            "aws_subnet.JobF-SUBNET-PUBLIC",
            "aws_vpc.JobF-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "JobF-RTB-PUBLIC-ASSOC1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e795841f5c238530",
            "route_table_id": "rtb-081995ff8545c7d01",
            "subnet_id": "subnet-0f98866a49c672213"
          },
          "dependencies": [
            "aws_internet_gateway.JobF-IGW",
            "aws_route_table.JobF-RTB-PUBLIC",
            "aws_subnet.JobF-SUBNET-AZ-A",
            "aws_vpc.JobF-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "JobF-RTB-PUBLIC-ASSOC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00fcc7012698e3a1a",
            "route_table_id": "rtb-081995ff8545c7d01",
            "subnet_id": "subnet-0c1c6db715994c74e"
          },
          "dependencies": [
            "aws_internet_gateway.JobF-IGW",
            "aws_route_table.JobF-RTB-PUBLIC",
            "aws_subnet.JobF-SUBNET-AZ-B",
            "aws_vpc.JobF-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "JobF-RTB-PUBLIC-ASSOC3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014b028751250c53e",
            "route_table_id": "rtb-081995ff8545c7d01",
            "subnet_id": "subnet-08ef259f89026d659"
          },
          "dependencies": [
            "aws_internet_gateway.JobF-IGW",
            "aws_route_table.JobF-RTB-PUBLIC",
            "aws_subnet.JobF-SUBNET-AZ-C",
            "aws_vpc.JobF-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "JobF-SG-LOAD-BALANCER",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:security-group/sg-083d6e949364d6eba",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-083d6e949364d6eba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230922090628405700000001",
            "name_prefix": "terraform-",
            "owner_id": "949160236929",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "JobF-SG-LOAD-BALANCER"
            },
            "tags_all": {
              "Name": "JobF-SG-LOAD-BALANCER"
            },
            "timeouts": null,
            "vpc_id": "vpc-04430bcc9f8c8a83a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.JobF-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "JobF-SG-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:security-group/sg-041db447f8bd9b47c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-041db447f8bd9b47c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3128,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-087f467951b0da0fb"
                ],
                "self": false,
                "to_port": 3128
              }
            ],
            "name": "terraform-20230922090633409800000003",
            "name_prefix": "terraform-",
            "owner_id": "949160236929",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "JobF-SG-PUBLIC"
            },
            "tags_all": {
              "Name": "JobF-SG-PUBLIC"
            },
            "timeouts": null,
            "vpc_id": "vpc-04430bcc9f8c8a83a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.JobF-SG-LOAD-BALANCER",
            "aws_security_group.JobF-SG-WEB",
            "aws_vpc.JobF-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "JobF-SG-WEB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:security-group/sg-087f467951b0da0fb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-087f467951b0da0fb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-083d6e949364d6eba"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230922090631181600000002",
            "name_prefix": "terraform-",
            "owner_id": "949160236929",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "JobF-SG-PUBLIC"
            },
            "tags_all": {
              "Name": "JobF-SG-PUBLIC"
            },
            "timeouts": null,
            "vpc_id": "vpc-04430bcc9f8c8a83a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.JobF-SG-LOAD-BALANCER",
            "aws_vpc.JobF-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "JobF-SUBNET-AZ-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:subnet/subnet-0f98866a49c672213",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f98866a49c672213",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949160236929",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "JobF-SUBNET-AZ-A"
            },
            "tags_all": {
              "Name": "JobF-SUBNET-AZ-A"
            },
            "vpc_id": "vpc-04430bcc9f8c8a83a"
          },
          "dependencies": [
            "aws_vpc.JobF-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "JobF-SUBNET-AZ-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:subnet/subnet-0c1c6db715994c74e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1c6db715994c74e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949160236929",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "JobF-SUBNET-AZ-B"
            },
            "tags_all": {
              "Name": "JobF-SUBNET-AZ-B"
            },
            "vpc_id": "vpc-04430bcc9f8c8a83a"
          },
          "dependencies": [
            "aws_vpc.JobF-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "JobF-SUBNET-AZ-C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:subnet/subnet-08ef259f89026d659",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ef259f89026d659",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949160236929",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "JobF-SUBNET-AZ-C"
            },
            "tags_all": {
              "Name": "JobF-SUBNET-AZ-C"
            },
            "vpc_id": "vpc-04430bcc9f8c8a83a"
          },
          "dependencies": [
            "aws_vpc.JobF-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "JobF-SUBNET-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:subnet/subnet-09d3053f0709e9061",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d3053f0709e9061",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949160236929",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "JobF-SUBNET-PUBLIC"
            },
            "tags_all": {
              "Name": "JobF-SUBNET-PUBLIC"
            },
            "vpc_id": "vpc-04430bcc9f8c8a83a"
          },
          "dependencies": [
            "aws_vpc.JobF-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "JobF-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949160236929:vpc/vpc-04430bcc9f8c8a83a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04b3e9373a182f88a",
            "default_route_table_id": "rtb-0f4536914e4914a57",
            "default_security_group_id": "sg-0881b198b90aacadb",
            "dhcp_options_id": "dopt-0f37752447b5d60ae",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04430bcc9f8c8a83a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f4536914e4914a57",
            "owner_id": "949160236929",
            "tags": {
              "Name": "JobF-VPC"
            },
            "tags_all": {
              "Name": "JobF-VPC"
            }
          }
        }
      ]
    }
  ]
}